phase 1 and 2 implemented

--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
-/* Your code here */
+#page-title {
+    font-weight: bold;
+}
 
+.pagenum {
+    position: absolute;
+    right: 10px;
+    font-size: small;
+}
 /* ===== DO NOT EDIT BELOW THIS COMMENT ===== */
 
 .noin {
